examples/errors/errors/CalcError.tsb
// A Rust-style enum: tagged union with namespaced constructors. tsb
// emits a TS discriminated union and a `CalcError` namespace const
// holding the variant factories (`CalcError.BadNumber({ input })`,
// `CalcError.DivByZero` for unit variants).
//
// Matching uses the `CalcError.Variant` syntax — far closer to
// Rust's `CalcError::Variant` than the raw `{ kind: "X" }` form.

enum CalcError {
  BadNumber { input: string },
  UnknownOp { op: string },
  DivByZero,
}
